Fix spacing issue with categories on blog index page

--- a/web/styles/BlogHome.module.css
+++ b/web/styles/BlogHome.module.css
@@ -4,9 +4,11 @@
 }
 
 .categories > * {
-  margin-top: 10px;
   margin-right: 10px;
   margin-bottom: 10px;
+}
+.categories {
+  margin-top: 10px;
 }
 
 .categories > *:last-child {
